--- a/modules/zramswap/scripts/zramswap.service
+++ b/modules/zramswap/scripts/zramswap.service
@@ -2,7 +2,7 @@
 Description=ZramSwap
 DefaultDependencies=no
 Before=basic.target rsyslog.service syslog-ng.service syslog.target systemd-journald.service sysinit.target shutdown.target zram-swap-conf.service apache2.service lighttpd.service
-After=local-fs.target
+After=local-fs.target log2ram.service
 Conflicts=shutdown.target reboot.target halt.target
 IgnoreOnIsolate=yes
 
