Change Raspi4 to Master and add Prometheus

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 kubeconfig
 *.ppk
 
+.terraform.lock.hcl
 .terraform/
 terraform.tfstate.d/
 terraform.*tfvars
-!terraform.example.tfvars
+!terraform.example*.tfvars
 terraform.tfstate
 terraform.tfstate.backup
